[gd_scene load_steps=4 format=3 uid="uid://c48osolg8fvw7"]

[ext_resource type="Script" path="res://scenes/menu.gd" id="1_cfxf2"]
[ext_resource type="FontFile" uid="uid://dltpi0wumvquw" path="res://assets/Fonts/GladlyAcceptRegular-Wyjov.ttf" id="2_evgvp"]
[ext_resource type="Texture2D" uid="uid://doh28rwp3si8p" path="res://assets/Menu/MenuBackgroundDFS.png" id="2_lrmq0"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cfxf2")

[node name="MenuBackgroundDfs" type="Sprite2D" parent="."]
position = Vector2(576, 324)
texture = ExtResource("2_lrmq0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 31.0
offset_top = -279.0
offset_right = 206.0
offset_bottom = -79.0
grow_vertical = 0
auto_translate = false
localize_numeral_system = false
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 7
size_flags_stretch_ratio = 3.29
focus_neighbor_top = NodePath("../QuitButton")
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.00784314, 0.513726, 0.568627, 1)
theme_override_fonts/font = ExtResource("2_evgvp")
theme_override_font_sizes/font_size = 23
text = "Empezar"
flat = true

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 7
size_flags_stretch_ratio = 3.29
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.00784314, 0.513726, 0.568627, 1)
theme_override_fonts/font = ExtResource("2_evgvp")
theme_override_font_sizes/font_size = 23
text = "Opciones"
flat = true

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 7
size_flags_stretch_ratio = 3.29
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.00784314, 0.513726, 0.568627, 1)
theme_override_fonts/font = ExtResource("2_evgvp")
theme_override_font_sizes/font_size = 23
text = "Cr√©ditos"
flat = true

[node name="ExtrasButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 7
size_flags_stretch_ratio = 3.29
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.00784314, 0.513726, 0.568627, 1)
theme_override_fonts/font = ExtResource("2_evgvp")
theme_override_font_sizes/font_size = 23
text = "Extras"
flat = true

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 9
size_flags_vertical = 7
size_flags_stretch_ratio = 3.29
focus_neighbor_bottom = NodePath("../StartButton")
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.00784314, 0.513726, 0.568627, 1)
theme_override_fonts/font = ExtResource("2_evgvp")
theme_override_font_sizes/font_size = 23
text = "Salir"
flat = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExtrasButton" to="." method="_on_extras_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
